--- a/css/home.css
+++ b/css/home.css
@@ -55,6 +55,7 @@
 .post-title {
   margin: 0px;
   margin-bottom: 14px;
+  padding-top: 30px;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
