--- a/css/common.css
+++ b/css/common.css
@@ -85,6 +85,7 @@ li {
 
 .links li:last-child {
   margin-right: 331px;
+  
 }
 
 .links-item,
@@ -235,7 +236,10 @@ li {
   margin-left: auto;
   width: 270px;
   height: 120px;
+  border-radius: 4px;
 }
+
+
 
 
 /*.post li::before {
