--- a/css/home.css
+++ b/css/home.css
@@ -81,7 +81,8 @@
 }
 
 .works,
-.ot-h2 {
+.ot-h2,
+.clientsh {
   margin-top: 0px;
   margin-bottom: 50px;
   margin-right: auto;
@@ -142,6 +143,39 @@
 
 .ot {
   background: var(--background-color);
+}
+
+.clients {
+  padding: 94px 215px;
+}
+
+.clients-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
+}
+
+.clients-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 90px;
+  border-radius: 4px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  fill: #afb1b8;
+}
+
+.clients-item:hover,
+.clients-item:focus {
+  fill: var(--button-color);
+  border: 1px solid var(--button-color);
+}
+
+.clients-list {
+  padding-left: 30px;
 }
 
 /*.ot .container {
