--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -71,6 +71,14 @@
   margin-top: 30px;
   margin-left: 30px;
   outline: 1px solid #ececec;
+  cursor: pointer;
+}
+
+.post-item:hover,
+.post-item:focus {
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
+  0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+  0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
 
 .name-card {
