--- a/css/home.css
+++ b/css/home.css
@@ -64,7 +64,6 @@
 .post-title {
   margin: 0px;
   margin-bottom: 14px;
-  padding-top: 30px;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
@@ -143,7 +142,7 @@
 
 .ot-list-itemp {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
@@ -185,7 +184,7 @@
 }
 
 .clients-list {
-  padding-left: 30px;
+  margin-left: 30px;
 }
 
 .clients-list:first-child {
@@ -202,7 +201,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 16px;
 }
 
 .networks-item {
