--- a/css/common.css
+++ b/css/common.css
@@ -180,25 +180,37 @@ li {
   color: var(--button-color);
 }
 
-.links,
+/*.links,
 .header .contakts {
   margin-top: 32px;
   margin-bottom: 32px;
-}
+}*/
 
 .contakts-item {
   color: var(--main-gray);
   padding: 0px;
   display: flex;
   align-items: center;
-  padding-left: 32px;
-  }
+  padding: 32px 0;
+}
+
+/*.contakts-menu {
+  margin-left: 30px;
+}*/
+
+.contakts-menu:last-child {
+  margin-left: 30px;
+}
 
 .links-item {
   color: var(--main-text-color);
   text-align: center;
   display: block;
-  padding-left: 50px;
+  padding: 32px 0;
+}
+
+.links-menu {
+  margin-left: 50px;
 }
 
 .links .links-item.carrnet {
